--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
 .header-bg-color {
     background-color: #FFFBF0;
-    ;
+}
+
+.doller-color {
+    color: #FABE4C;
+}
+
+.buy-button {
+    background-image: linear-gradient(to bottom, #A4BC46 0%, #A4BC46 100%);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    width: 140px;
+    height: 45px;
+}
+
+.jacket-color {
+    background-color: #F1F1F1;
+}
+
+.jacket-border {
+    border-radius: 20px;
 }
